# agentic-digital-forensics-simulator

./: CLAUDE.md  ECHO_PLAN.md  PLAYTHROUGH.md  README.md  agents.md  design.md  echo-design.md  package-lock.json  package.json  record-demo.sh  run-start.sh  run.sh
backend/: .env  .gitignore  README.md  config.py  echo_scenarios.py  main.py  pyproject.toml  test_llm.py  test_models.py  test_ws.py
backend/agents/profiles/: chrono.json  filer.json  logis.json  nexus.json
backend/graph/: builder.py  chat.py  llm.py  memory.py  names.py  prompts.py  utils.py
backend/graph/nodes/: build_context.py  npc_orchestrator.py  parse_policy.py  run_round.py
backend/models/: schemas.py  state.py
backend/nips/: __init__.py  agent_generator.py  archetypes.py  boss_evaluation.py  case_bundle.py  chat.py  models.py  progression.py  prompts.py  remediation.py  scoring.py  session.py  tools.py
backend/routers/: echo.py  extract.py  nips_router.py  radio.py  simulate.py
backend/services/: __init__.py  context_store.py  economic_report.py  investigation_agents.py
backend/tests/: test_e2e.py  test_echo.py  test_move_collision.py  test_nips_agent_generator.py  test_nips_chat.py  test_nips_progression.py  test_nips_scoring.py  test_nips_session.py  test_source_ingestion.py
docs/: MIDGAME_ENDGAME_CHANGES.md  TUTORIAL_MODE.md  TUTORIAL_MODE_CHANGES.md
frontend/: .gitignore  AGENTS.md  README.md  frontend-doc.md  package-lock.json  package.json  play.json  vitest.config.ts  vitest.setup.ts
frontend/public/: example-replay.json
scripts/: record-demo.js
(+170 files in other folders)
