[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.135.2",
    "langchain-openai>=0.3.0",
    "langchain-core>=1.2.23",
    "langgraph>=1.1.3",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.42.0",
    "pypdf>=5.0.0",
    "python-socketio>=5.16.1",
    "websockets>=16.0",
    "aiohttp>=3.13.5",
    "google-genai>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "basedpyright>=1.38.4",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
